--- a/portfolio-Akshay-main/portfolio-Akshay-main/Responsive Portfolio Website/Responsive Portfolio Website/index.html
+++ b/portfolio-Akshay-main/portfolio-Akshay-main/Responsive Portfolio Website/Responsive Portfolio Website/index.html
@@ -76,7 +76,7 @@
               server-side applications work with API's , EJS and database
               techonology such as MongoDB and MySQL
               <br />
-              <a href="images/Akshay_Resume.pdf" download>Download CV</a>
+              <a href="images/AkshayResume_.pdf" download>Download CV</a>
             </p>
           </div>
         </div>
